Mobile exibir escola front-end

--- a/src/main/webapp/views/assets/css/mobile.css
+++ b/src/main/webapp/views/assets/css/mobile.css
@@ -59,7 +59,7 @@
 	border-radius: 10px;
 }
 
-.map-container-blur {
+.map-container-blur, .map-container-loading {
 	visibility: hidden;
 	position: absolute;
 	width: 100%;
@@ -69,6 +69,13 @@
 
 .map-container-blur.blur-show {
 	visibility: visible;
+}
+
+.map-container-loading.loading-show {
+	visibility: visible;
+	background-image: url('icons/loading.svg');
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
 }
 
 #map.map-small {
