--- a/src/main/webapp/views/assets/css/fab-menu.css
+++ b/src/main/webapp/views/assets/css/fab-menu.css
@@ -13,6 +13,7 @@
 .plus {
 	color: white;
 	position: absolute;
+	visibility: visible;
 	top: 0;
 	display: block;
 	bottom: 0;
@@ -25,24 +26,12 @@
 	font-size: 38px;
 	font-family: 'Roboto';
 	font-weight: 300;
-	animation: plus-out 0.3s;
-	transition: all 0.3s;
+	transition: all 0.5s;
+	transform: rotateZ(0deg);
 }
 
-.fab-x {
-	width: 32px;
-	margin: 9px;
-	display: block;
-	opacity: 0;
-	transform: rotateZ(-70deg);
-	transition: all 0.3s;
-	animation: edit-out 0.3s;
-}
-
-#container-floating:hover .fab-x {
-	animation: edit-in 0.2s;
-	animation-delay: 0.1s;
-	animation-fill-mode: forwards;
+.plus-rotate {
+	transform: rotateZ(225deg);
 }
 
 #container-floating {
@@ -63,80 +52,17 @@
 }
 
 
-#container-floating:hover {
+#container-floating.floating-show {
 	height: 400px;
 	width: 90px;
 	padding: 30px;
 }
 
-#container-floating:hover .plus {
-	animation: plus-in 0.15s linear;
-	animation-fill-mode: forwards;
-}
-
-.edit {
-	color: white;
-	position: absolute;
-	top: -4px;
-	display: block;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	padding: 0;
-	opacity: 0;
-	margin: 0;
-	line-height: 50px;
-	font-size: 32px;
-	text-align: center;
-	line-height: 65px;
-	transform: rotateZ(-70deg);
-	transition: all 0.3s;
-	animation: edit-out 0.3s;
-}
-
-#container-floating:hover .edit {
-	animation: edit-in 0.2s;
-	animation-delay: 0.1s;
-	animation-fill-mode: forwards;
-}
 
 @keyframes edit-in {
 	from {
 		opacity: 0;
 		transform: rotateZ(-70deg);
-	}
-	to {
-		opacity: 1;
-		transform: rotateZ(0deg);
-	}
-}
-
-@keyframes edit-out {
-	from {
-		opacity: 1;
-		transform: rotateZ(0deg);
-	}
-	to {
-		opacity: 0;
-		transform: rotateZ(-70deg);
-	}
-}
-
-@keyframes plus-in {
-	from {
-		opacity: 1;
-		transform: rotateZ(0deg);
-	}
-	to {
-		opacity: 0;
-		transform: rotateZ(180deg);
-	}
-}
-
-@keyframes plus-out {
-	from {
-		opacity: 0;
-		transform: rotateZ(180deg);
 	}
 	to {
 		opacity: 1;
@@ -150,31 +76,29 @@
 	border-radius: 50%;
 	position: fixed;
 	z-index: 300;
+	opacity: 0;
 	transform: scale(0);
 	cursor: pointer;
+	transition: all 0.1s linear;
 }
 
 .nd1 {
 	background: #18516e;
 	right: 24px;
 	bottom: 130px;
-	animation-delay: 0.2s;
-	animation: bounce-out-nds 0.3s linear;
-	animation-fill-mode: forwards;
 	box-shadow: 0px 2px 5px #666;
 	text-align: center;
 	color: white;
+	transition-delay: 0.18s;
 }
 
 .nd2 {
 	background: #18516e;
 	right: 24px;
 	bottom: 190px;
-	animation-delay: 0.2s;
-	animation: bounce-out-nds 0.3s linear;
-	animation-fill-mode: forwards;
 	box-shadow: 0px 2px 5px #666;
 	color: white;
+	transition-delay: 0.25s;
 }
 
 .mobile-instagram {
@@ -192,51 +116,16 @@
 	background: #18516e;
 	right: 24px;
 	bottom: 250px;
-	animation-delay: 0.15s;
-	animation: bounce-out-nds 0.15s linear;
-	animation-fill-mode: forwards;
 	box-shadow: 0px 2px 5px #666;
 	overflow: hidden;
+	transition-delay: 0.3s;
 }
 
 .nd3 img {
 	width: 100%;
 }
 
-@keyframes bounce-nds {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-		transform: scale(1);
-	}
-}
-
-@keyframes bounce-out-nds {
-	from {
-		opacity: 1;
-		transform: scale(1);
-	}
-	to {
-		opacity: 0;
-		transform: scale(0);
-	}
-}
-
-#container-floating:hover .nds {
-	animation: bounce-nds 0.1s linear;
-	animation-fill-mode: forwards;
-}
-
-#container-floating:hover .nd1 {
-	animation-delay: 0.08s;
-}
-
-#container-floating:hover .nd2 {
-	animation-delay: 0.15s;
-}
-
-#container-floating:hover .nd3 {
-	animation-delay: 0.2s;
+.nds-show {
+	transform: scale(1);
+	opacity: 1;
 }
