--- a/src/main/webapp/views/assets/css/mobile.css
+++ b/src/main/webapp/views/assets/css/mobile.css
@@ -418,6 +418,7 @@
 	color: #333;
 }
 
+
 /* FILTROS */
 
 .mobile-filtro {
@@ -482,6 +483,7 @@
 	top: 0;
 	overflow: auto;
 	z-index: 1;
+	border-radius: 0 0 10px 10px;
 	transform: translateY(100%);
 	transition: all 0.5s;
 	transition-delay: 0.5s;
@@ -509,10 +511,91 @@
     flex-direction: column;
     background-color: white;
 	padding: 0 20px;
+	padding-bottom: 60px;
 }
 
 .escola-mobile-nome {
-	margin-top: -30px;
+	font-size: 20px;
+	color: #35343D;
+	margin-top: -20px;
+}
+
+.escola-mobile-endereco {
+	margin-top: 4px;
+	font-size: 11px;
+	color: #9d9d9d;
+}
+
+.mobile-ideb-info-ini {
+	display: flex;
+	flex-direction: row;
+	margin-top: 20px;
+}
+
+.escola-mobile-notas {
+	display: flex;
+	flex-direction: column;
+	height: auto;
+}
+
+.notas-title {
+    font-size: 14px;
+    color: #9b9b9b;
+    margin-bottom: 10px;
+}
+
+.mobile-meta-ini {
+	width: 60px;
+	height: 60px;
+	margin-bottom: 8px;
+	border: 2px grey solid; 
+	border-radius: 3px;
+	color: grey;
+	text-align: center;
+}
+
+.meta-ini-title {
+	font-size: 11px;
+}
+
+.meta-ini-valor {
+    position: relative;
+    font-size: 30px;
+    top: -10%;
+}
+
+.mobile-nota-ini {
+	width: 60px;
+	height: 60px;
+	border-width: 2px;
+	border-style: solid;
+	border-radius: 3px;
+	text-align: center;
+}
+
+.nota-ini-title {
+	font-size: 11px;
+}
+
+.nota-ini-valor {
+	position: relative;
+    font-size: 30px;
+    top: -10%;
+}
+
+.nota-red {
+	color: red;
+	border-color: red; 
+}
+
+.nota-green {
+	color: green;
+	border-color: green; 
+}
+
+.nota-yellow {
+	color: yellow;
+	border-color: yellow; 
 }
 
 /* FOOTER MOBILE */
@@ -641,11 +724,6 @@
 	
 	.redes-sociais, .footer-filtros, .copyright, .side-menu, #fecha-ideb, #fecha-compare-desk {
 		display: none;
-	}
-	
-	.boxes {
-	    width: 37px;
-	    height: 37px;
 	}
 	
 	.logo {
@@ -870,12 +948,37 @@
 		width: 100%;
 	}
 	
-	.escola-mobile-galeria a {
-		border: 1px black solid;
+	.big-box {
+		width: 100%;
+	    height: 180px;
+	    margin-top: 25px;
+	    border-radius: 3px;
+	}
+	
+	.boxes {
+		height: 64px;
+	    width: 100%;
+    	border-radius: 3px;
 	}
 	
 	.foto-hidden {
 		display: none;
+	}
+	
+	#foto-visita-counter .counter {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+	    width: 100%;
+	    color: white;
+	    transform: translate(-50%, -50%);
+	}
+	
+	#foto-visita-counter .background {
+		position: absolute;
+	    height: 100%;
+	    width: 100%;
+	    background-color: rgba(60,60,60,0.9);
 	}
 	
 }
