--- a/src/main/webapp/views/assets/css/mobile.css
+++ b/src/main/webapp/views/assets/css/mobile.css
@@ -579,6 +579,7 @@
 	display: flex;
 	flex-direction: column;
 	height: auto;
+    justify-content: space-around;
 }
 
 .notas-title-ini, .notas-title-fin {
@@ -1122,5 +1123,22 @@
 	#mobile-ideb-fin-grafico {
 		width: 80%;
 		height: 150px;
+	}
+	
+	.btn-relatorio, .btn-requerimento {
+	    display: inline-block;
+	    transition: all .5s ease-in-out;
+	    color: #565656;
+    	box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
+    	border-radius: 50px;
+    	border: 0px;
+	    min-height: 60px;
+	    font-size: 14px;
+	    padding: 18px 40px;
+	    text-align: center;
+	    width: 100%;
+	    letter-spacing: 1px;
+	    margin: 20px 0;
+	    font-weight: 600;
 	}
 }
