--- a/src/main/webapp/views/assets/css/frontpage.css
+++ b/src/main/webapp/views/assets/css/frontpage.css
@@ -493,6 +493,11 @@ input:-ms-input-placeholder {  /* IE */
 }
 
 .detalhe-numeros canvas{
+	width: 100%;
+	height: 100%;
+	max-width: 700px;
+	max-height: 400px;
+	min-height: 200px;
 	margin-top: 20px;
 }
 
