--- a/src/main/webapp/views/assets/css/mapa.css
+++ b/src/main/webapp/views/assets/css/mapa.css
@@ -74,20 +74,28 @@ box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5); */
 
 .boxes
 {
-	height: 45px;
+    height: 100px;
+    width: 100%;
+    border-radius: 3px;
 	border: none !important;
 }
 
 .big-box
 {
-	width: 100%;
-	height: 300px;
-	margin-top: 40px;
+	display: inline-block;
+    width: 100%;
+    max-height: 350px;
+    margin-top: 25px;
+    border-radius: 3px;
 }
 
 .boxes img
 {
     height: 100%;
+    width: 100%;
+}
+
+#foto-visita-1 img {
     width: 100%;
 }
 
