--- a/src/main/webapp/views/assets/css/mapa.css
+++ b/src/main/webapp/views/assets/css/mapa.css
@@ -826,6 +826,12 @@ input.pesquisa-input
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	width: 100%;
+	height: 100%;
+	max-width: 700px;
+	max-height: 400px;
+	min-height: 240px;
+	margin-top: 20px;
 }
 
 .grafico-pizza
@@ -918,10 +924,22 @@ input.pesquisa-input
 }
 
 .compare-galerias > h4,
-.compare-escola > h4
+.compare-escola > h4,
+.compare-ideb h4,
+.compare-aprendizado h4
 {
 	font-size: 28px;
 	margin: 20px;
+}
+
+.compare-ideb h4,
+.compare-aprendizado h4
+{
+	display: none;
+}
+
+.compare-apr-ano {
+	font-size: 20px !important;
 }
 
 .social-item
